[package]
name = "keon"
version = "0.2.0"
edition = "2021"
rust-version = "1.74.0"
authors = ["K--Aethiax"]

description = "A human readable object notation that syntactic similar to Rust and fully supports Serde's data model."

documentation = "https://docs.rs/keon"
repository = "https://github.com/eternal-io/keon"
license = "MIT OR Apache-2.0"
readme = "CRATES.IO-README.md"

keywords = ["serde", "serialization", "object-notation", "format", "parser"]
categories = ["encoding"]

include = ["src/**", "tests/**", "examples/**"]

[features]
default = ["std"]
std = []

[dependencies]
serde = { version = "1.0.217", features = ["derive"] }
kaparser = { path = "../kaparser" }
smol_str = "0.3.2"
data-encoding = "2.7.0"
lexical-core = { version = "1.0.5", features = ["format", "power-of-two"] }


[dev-dependencies]
serde_json = "1.0.138"
serde_bytes = "0.11.15"
